--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable = no" />
-    <link href="css/freeboard.min.css" rel="stylesheet" />
-    <script src="js/freeboard.thirdparty.min.js"></script>
+    <link href="freeboard/css/freeboard.min.css" rel="stylesheet" />
+    <script src="freeboard/js/freeboard.thirdparty.min.js"></script>
     <script type="text/javascript">
-        head.js("js/freeboard_plugins.min.js",
+        head.js("freeboard/js/freeboard_plugins.min.js",
                 // *** Load more plugins here ***
                 function(){
                     $(function()
